--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,5 @@ body{
     --tw-bg-opacity: 1;
     background-color: rgb(0 0 0 / var(--tw-bg-opacity)) /* #000000 */;
     font-family: "Space Grotesk", serif;
-
-
+    color: white;
 }
