--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,6 +34,11 @@ body{
   background-size: 100% 100%; /* Ensure it covers the element */
 }
 
+.overlay-gradient {
+  background: linear-gradient(to top, transparent, black);
+  background-size: 50% 100%; /* Ensure it covers the element */
+}
+
 /* Keyframe animation for the border */
 @keyframes borderGlow {
   0% {
