--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -60,3 +60,33 @@ body{
   animation: borderGlow 2s infinite;
   border-style: dashed;
 }
+
+@keyframes slide {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(-50%);
+  }
+}
+
+.vertical-slider {
+  overflow: hidden;
+  position: relative;
+}
+
+.slider-content {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  animation: slide 60s linear infinite reverse;
+}
+
+.reverse-slider-content{
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  animation: slide 60s linear infinite;
+}
+
+
