--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -33,7 +33,11 @@ body{
   background: linear-gradient(to bottom, transparent, black);
   background-size: 100% 100%; /* Ensure it covers the element */
 }
-
+.gradient-overlay-reviews{
+  
+  background: linear-gradient(to left, black, transparent, black);
+  background-size:100% 500% 100%; /* Controls the size of the gradient */
+}
 .overlay-gradient {
   background: linear-gradient(to top, transparent, black);
   background-size: 50% 100%; /* Ensure it covers the element */
