--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -94,7 +94,7 @@ body{
 }
 
 .grad{
-  background-image: linear-gradient(black,black, rgba(255, 255, 255, 0.179),black, black);
+  background-image: linear-gradient(black ,rgba(255, 255, 255, 0), rgba(255, 255, 255, 0),rgba(255, 255, 255, 0), rgba(255, 255, 255, 0),black );
 }
 
 
